creacion ddl tablas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-#spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tarea1_alumno
-spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=update
+server.port=8095
+#Configuraciones DataSource
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=ROGGER
 spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##Configuraciones JPA - Hibernate
 spring.jpa.show-sql=true
