termino security oracle 11g

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 server.port=8095
 #Configuraciones DataSource
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
